compiler/testData/diagnostics/tests/annotations/Deprecated.kt
import java.lang.Deprecated as deprecated

<!DEPRECATED_JAVA_ANNOTATION!>Deprecated<!> fun foo() {}

<!DEPRECATED_JAVA_ANNOTATION!>deprecated<!> fun foo1() {}